# FastAPI-blog-website

./: .gitignore  README.md  auth.py  blog.db  config.py  database.py  image_utils.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
routers/: posts.py  users.py
templates/: account.html  home.html  layout.html  post.html
